[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fonte/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menu.gd" type="Script" id=2]
[ext_resource path="res://pixel_sprites/c5b6a753a75ef89.png" type="Texture" id=3]
[ext_resource path="res://pixel_sprites/Menu.png" type="Texture" id=4]
[ext_resource path="res://pixel_sprites/EXIT.png" type="Texture" id=5]
[ext_resource path="res://pixel_sprites/nine.png" type="Texture" id=6]
[ext_resource path="res://pixel_sprites/download.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 1 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="."]
anchor_bottom = 0.0598958
margin_left = 348.0
margin_top = 856.0
margin_right = 737.0
margin_bottom = 960.0
custom_fonts/font = SubResource( 1 )
text = "
Menu Game"
align = 1
valign = 1

[node name="START" type="TouchScreenButton" parent="Label"]
position = Vector2( 60, -36 )
scale = Vector2( 0.319192, 0.319192 )
normal = ExtResource( 3 )

[node name="Quit" type="TouchScreenButton" parent="Label"]
position = Vector2( 81, 256 )
scale = Vector2( 0.4375, 0.4375 )
normal = ExtResource( 5 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="Label"]
position = Vector2( 63, 137 )
scale = Vector2( 0.782313, 0.782313 )
normal = ExtResource( 7 )

[node name="Nine" type="Sprite" parent="."]
position = Vector2( 681, 352 )
rotation = 0.431371
scale = Vector2( 0.202679, 0.202679 )
texture = ExtResource( 6 )

[connection signal="pressed" from="Label/START" to="." method="_on_START_pressed"]
[connection signal="pressed" from="Label/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Label/TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
